# point-cloud-triangulation

./: .gitignore  CMakeLists.txt  README.md  config.json  input.xyz  output.txt
src/: config.cpp  config.h  file_parser.cpp  file_parser.h  geometry.h  main.cpp  preprocessor.cpp  preprocessor.h
tests/: config.json
